Fix alignment of podcast episode thumbnail
When widget is squished down, the episode title can become very tall,
and the thumbnail doesn't look good vertically-centered next to it. The
thumbnail should always be top-aligned.

--- a/styles/widgets/widget-Podcast/_podcast-now-playing.scss
+++ b/styles/widgets/widget-Podcast/_podcast-now-playing.scss
@@ -11,7 +11,7 @@
 
 .podcast-now-playing-header {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .podcast-now-playing-image {
